2026_01_AnalisisLexico/analisis-lexico/src/main/java/edu/url/compiladores/antlr/Expr.g4
grammar Expr;

prog:   (expr NEWLINE)* ;

expr:   expr ('*'|'/') expr
    |   expr ('+'|'-') expr
    |   INT
    |   '(' expr ')'
	|	IDENTIFICADOR
    ;
	
NEWLINE : [\r\n]+ ;
INT     : [0-9]+ ;
IDENTIFICADOR : ([a-z]|[A-Z])+;
